[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
num-traits="0.2.14"
regex = "1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0"
dotenv = "0.15"
num-bigint = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }  # Add tokio runtime
