[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version= "0.12.12", features = ["rustls-tls", "json"] } # For HTTP requests
tokio = { version = "1.43.0", features = ["full"] }  # Asynchronous runtime
serde = { version = "1.0", features = ["derive"] }  # For serialization/deserialization
dotenv = "0.15"  # For environment variable management

serde_json = "1.0"
num-bigint="0.4.3"
num-traits="0.2.14"
