[package]
name = "fibb"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.44.0", features = ["full"] }  # Asynchronous runtime
serde = { version = "1.0.219", features = ["derive"] }  # For serialization/deserialization
dotenv = "0.15"  # For environment variable management
reqwest = { version= "0.12.12", features = ["rustls-tls", "json"] } # For HTTP requests
octocrab = "0.43.0"
regex = "1.11.1"  # Use the latest version available

serde_json = "1.0"
num-bigint="0.4.6"
num-traits="0.2.19"
